--- a/index.html
+++ b/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etch-a-Sketch</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="javascript.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
-    <div class="buttonsBar">
-        <div class="penColor">
-            <input type="color" id="colorGrab" value="#000000">
-            <p>Pen Color</p>
-        </div>
-        <div class="BgColor">
-            <input type="color" id="BgGrab" value="#FFFFFF">
-            <p>Background Color</p>
-        </div>
-        <button class="pen">Color Pen</button>
-        <button class="rainbowMode">Rainbow Mode</button>
-        <button class="eraser">Eraser</button>
-        <button class="shader">Shading</button>
-        <button class="lighten">Lighten</button>
-        <input type="range" min="1x1" max="100" value="50" class="slider" id="myRange">
+    <div class="ButtonsBar">
+      <div class="penColor">
+        <input type="color" id="colorGrab" value="#000000" />
+        <span>Pen Color</span>
+      </div>
+      <div class="BgColor">
+        <input type="color" id="BgGrab" value="#FFFFFF" />
+        <span>Background Color</span>
+      </div>
+      <div>
+        <input name="same" type="radio" id="pen" value="pen selected" />
+        <label for="pen">Pen</label>
+      </div>
+      <div>
+        <input name="same" type="radio" id="rainbowMode" value="rainbowModeOn" />
+        <label for="rainbowMode">Rainbow Pen</label>
+      </div>
+      <div>
+        <input name="same" type="radio" id="eraser" value="eraser selected" />
+        <label for="eraser">Eraser</label>
+      </div>
+      <div>
+        <input name="same" type="radio" id="shader" value="shader selected" />
+        <label for="shader">Shader</label>
+      </div>
+      <div>
+        <input name="same" type="radio" id="lighten" value="lighter selected" />
+        <label for="lighten">Lighter</label>
+      </div>
+      <input
+        type="range"
+        min="1"
+        max="60"
+        value="50"
+        class="slider"
+        id="myRange"
+      />
+      <p class="gridVal"></p>
+      <div>
+        <input type="checkbox" id="gridLines" />
+        <label for="gridLines">Show Grid Lines</label>
+      </div>
+      <button id="clear">Clear</button>
+      <br>
+      <br>
     </div>
-    <div class="Grid"></div>
+    <div style="  width: 600px; height: 600px;" class="Grid" id="Grid"></div>
     <footer></footer>
-</body>
+  </body>
 </html>
