--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
         <label for="pen">Pen</label>
       </div>
       <div>
-        <input name="same" type="radio" id="rainbowMode" value="rainbowModeOn" />
+        <input
+          name="same"
+          type="radio"
+          id="rainbowMode"
+          value="rainbowModeOn"
+        />
         <label for="rainbowMode">Rainbow Pen</label>
       </div>
       <div>
@@ -52,10 +57,10 @@
         <label for="gridLines">Show Grid Lines</label>
       </div>
       <button id="clear">Clear</button>
-      <br>
-      <br>
+      <br />
+      <br />
     </div>
-    <div style="  width: 600px; height: 600px;" class="Grid" id="Grid"></div>
+    <div style="width: 600px; height: 600px" class="Grid" id="Grid"></div>
     <footer></footer>
   </body>
 </html>
