--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span>Background Color</span>
       </div>
       <div>
-        <input name="same" type="radio" id="pen" value="pen selected" />
+        <input name="same" type="radio" id="pen" value="pen selected" checked />
         <label for="pen">Pen</label>
       </div>
       <div>
@@ -54,7 +54,7 @@
       <p class="gridVal"></p>
       <div>
         <input type="checkbox" id="gridLines" />
-        <label for="gridLines">Show Grid Lines</label>
+        <label for="gridLines">Hide Grid Lines</label>
       </div>
       <button id="clear">Clear</button>
       <br />
