--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span>Background Color</span>
       </div>
       <div>
-        <input name="same" type="radio" id="pen" value="pen selected" checked />
+        <input name="same" type="radio" id="pen" value="pen" checked />
         <label for="pen">Pen</label>
       </div>
       <div>
@@ -27,20 +27,20 @@
           name="same"
           type="radio"
           id="rainbowMode"
-          value="rainbowModeOn"
+          value="rainbow"
         />
         <label for="rainbowMode">Rainbow Pen</label>
       </div>
       <div>
-        <input name="same" type="radio" id="eraser" value="eraser selected" />
+        <input name="same" type="radio" id="eraser" value="eraser" />
         <label for="eraser">Eraser</label>
       </div>
       <div>
-        <input name="same" type="radio" id="shader" value="shader selected" />
+        <input name="same" type="radio" id="shader" value="shader" />
         <label for="shader">Shader</label>
       </div>
       <div>
-        <input name="same" type="radio" id="lighten" value="lighter selected" />
+        <input name="same" type="radio" id="lighten" value="lighter" />
         <label for="lighten">Lighter</label>
       </div>
       <input
