--- a/index.html
+++ b/index.html
@@ -8,60 +8,58 @@
     <script src="javascript.js" defer></script>
   </head>
   <body>
-    <header></header>
-    <div class="ButtonsBar">
-      <div class="penColor">
-        <input type="color" id="colorGrab" value="#000000" />
-        <span>Pen Color</span>
-      </div>
-      <div class="BgColor">
-        <input type="color" id="BgGrab" value="#FFFFFF" />
-        <span>Background Color</span>
-      </div>
-      <div>
-        <input name="same" type="radio" id="pen" value="pen" checked />
-        <label for="pen">Pen</label>
-      </div>
-      <div>
+    <header>Etch-a-Sketch!</header>
+    <div class="content">
+      <div class="ButtonsBar">
+        <div class="penColor">
+          <input type="color" id="colorGrab" value="#000000" />
+          <span>Pen Color</span>
+        </div>
+        <div class="BgColor">
+          <input type="color" id="BgGrab" value="#FFFFFF" />
+          <span>Background Color</span>
+        </div>
+        <div>
+          <input name="same" type="radio" id="pen" value="pen" checked />
+          <label for="pen">Pen</label>
+        </div>
+        <div>
+          <input name="same" type="radio" id="rainbowMode" value="rainbow" />
+          <label for="rainbowMode">Rainbow Pen</label>
+        </div>
+        <div>
+          <input name="same" type="radio" id="eraser" value="eraser" />
+          <label for="eraser">Eraser</label>
+        </div>
+        <div>
+          <input name="same" type="radio" id="shader" value="shader" />
+          <label for="shader">Shader</label>
+        </div>
+        <div>
+          <input name="same" type="radio" id="lighten" value="lighter" />
+          <label for="lighten">Lighter</label>
+        </div>
         <input
-          name="same"
-          type="radio"
-          id="rainbowMode"
-          value="rainbow"
+          type="range"
+          min="1"
+          max="60"
+          value="16"
+          class="slider"
+          id="myRange"
         />
-        <label for="rainbowMode">Rainbow Pen</label>
+        <div class="gridVal"></div>
+        <div>
+          <input type="checkbox" id="gridLines" />
+          <label for="gridLines">Hide Grid Lines</label>
+        </div>
+        <div>
+          <button id="clear">Clear</button>
+        </div>
       </div>
-      <div>
-        <input name="same" type="radio" id="eraser" value="eraser" />
-        <label for="eraser">Eraser</label>
+      <div class="parentOfGrid">
+        <div style="width: 500px; height: 500px" class="Grid" id="Grid"></div>
       </div>
-      <div>
-        <input name="same" type="radio" id="shader" value="shader" />
-        <label for="shader">Shader</label>
-      </div>
-      <div>
-        <input name="same" type="radio" id="lighten" value="lighter" />
-        <label for="lighten">Lighter</label>
-      </div>
-      <input
-        type="range"
-        min="1"
-        max="64"
-        value="16"
-        class="slider"
-        id="myRange"
-      />
-      <p class="gridVal"></p>
-      <div>
-        <input type="checkbox" id="gridLines" />
-        <label for="gridLines">Hide Grid Lines</label>
-      </div>
-      <button id="clear">Clear</button>
-      <br />
-      <br />
     </div>
-    <div style="width: 600px; height: 600px" class="Grid" id="Grid"></div>
     <footer></footer>
-    <br><br><br><br><br><br>
   </body>
 </html>
