--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
         <div style="width: 500px; height: 500px" class="Grid" id="Grid"></div>
       </div>
     </div>
-    <footer></footer>
+    <footer>
+      <div class="footerDiv">
+        <div>Website by ajanegett</div>
+        <div>
+          <a
+            href="https://github.com/ajanegett"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><img src="github-logo.png" alt="github logo"
+          /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
