Fix a bug about bg color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="javascript.js" defer></script>
   </head>
   <body>
-    <header>Etch-a-Sketch!</header>
+    <header>Etch a Sketch!</header>
     <div class="content">
       <div class="ButtonsBar">
         <div class="penColor">
