--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="style.css" />
     <script src="javascript.js" defer></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
     <header>Etch a Sketch!</header>
